# Eye-Disease-Classification-using-various-ML-and-DL-models

./: README.md  clean_zone_identifier.py  main2.ipynb  pyproject.toml  pytorch_gpu_test.py  test.ipynb  test1.ipynb
