[project]
name = "eye-disease-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "transformers>=4.50.1",
]
